restyled responses title a bit and fixed form spacing

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -31,6 +31,7 @@ body {
 
 .Select-control {
 	cursor: text;
+	margin: 6px 0 0 0;
 }
 
 .Select img {
@@ -60,12 +61,13 @@ input[type=color] {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
+	margin: 6px 0 0 0;
 }
 
 .input-color-wrapper {
     border: 1px solid #aaa;
     border-radius: 4px;
-	margin: 6px 0;
+	margin: 6px 0 0 0;
 	height: 36px;
 	position: relative;
 	color: #aaaaaa;
