--- a/src/styles/responses.scss
+++ b/src/styles/responses.scss
@@ -8,7 +8,7 @@ div.soundtitle {
 	position: relative;
 	color: var(--itemtitle-color);
 	font-weight: bold;
-	font-size: 125%;
+	font-family: "consolas";
 	height: 32px;
 	line-height: 24px;
 	padding: 4px;
